# Monte_Carlo_Simulation_for_Estimating_pi

./: .gitignore  Estimate_pi.py  README.md  pyproject.toml  requirements.txt
src/: Estimate_pi.py  animation.py  estimate_pi_notebook.ipynb  estimate_pi_notebook_edu.ipynb
