[tool.poetry]
name = "monte_carlo_pi"
version = "0.1.0"
description = ""
authors = ["Jonathan Chow <jonathan.chow@mclaren.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.3.3"
numpy = "^1.19.4"
plotly = "^4.12.0"
dash = "^1.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
